--- a/app/globals.css
+++ b/app/globals.css
@@ -15,8 +15,6 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,4 +22,11 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+
+  .grid-image img{
+    width: 100% !important;
+     height: 100% !important;
+     object-fit: cover;
+  }
+
 }
